# movai_ce_demos

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manifest.txt
.github/workflows/: DeployOnGitRelease.yml  DeployOnMergeMain.yml  TestOnPR.yml
metadata/: manifest.txt
metadata/Callback/: align_to_cart_gripper_feedback.json  align_to_cart_gripper_feedback.py  align_to_cart_init.json  align_to_cart_init.py  align_to_cart_main_timer.json  align_to_cart_main_timer.py  align_to_cart_odom_feedback.json  align_to_cart_odom_feedback.py  align_to_cart_tf_sub.json  align_to_cart_tf_sub.py  align_to_cart_timeout_timer.json  align_to_cart_timeout_timer.py  go_to_action_result.json  go_to_action_result.py  go_to_init.json  go_to_init.py  initial_pose_publisher_timer.json  initial_pose_publisher_timer.py  map_save_map.json  map_saver_get_map.json  map_saver_get_map.py  map_saver_init.json  map_saver_init.py  map_saver_movai_init.json  map_saver_movai_init.py  map_saver_movai_save_map.json  map_saver_movai_save_map.py  map_saver_trigger.json  map_saver_trigger.py  move_distance_entry.json  move_distance_entry.py  move_distance_odometry.json  move_distance_odometry.py  move_distance_timer.json  move_distance_timer.py  rotate_entry.json  rotate_entry.py  rotate_odometry.json  rotate_odometry.py  rotate_timer.json  (+9 more)
metadata/Configuration/: app-custom-ide-ce.json  app-custom-ide-ce.yaml  app-custom-ide.json  app-custom-ide.yaml
metadata/Flow/: husky_autonomous_navigation.json  husky_mapping.json  husky_simple_navigation.json  panda_hello_world.json  tugbot_autonomous_navigation.json  tugbot_mapping.json  tugbot_pick_and_drop.json  tugbot_simple_navigation.json  visualize_map.json
metadata/Node/: align_to_cart.json  amcl.json  apriltag_ros_continuous_node.json  dummy.json  ekf_odom.json  global_costmap.json  global_planner.json  gmapping.json  go_to.json  initial_pose_publisher.json  local_costmap.json  map_saver.json  map_saver_movai.json  map_server.json  move_base.json  move_distance.json  rotate.json  teb_local_planner.json  tf_gen.json
metadata/Package/maps/: depot.yaml  warehouse.yaml
movai_ce_demos/: CMakeLists.txt  package.xml
my_ros_component/: CMakeLists.txt  package.xml
