<?xml version="1.0"?>
<package format="2">
  <name>movai_ce_demos</name>
  <version>0.0.1</version>
  <description>Main flow and maps of the community edition demos.</description>
  <maintainer email="mithun@mov.ai">Mithun Kinarullathil</maintainer>
  <url>https://github.com/MOV-AI/movai_ce_demos</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- TODO: Update other dependencies here, such as navigation and localization packages -->
  <!-- <depend>movai_tugbot_ign_sim_baseline</depend> -->
  <depend>robot_localization</depend>
  <depend>gmapping</depend>
  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>teb_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>global_planner</depend>
  <depend>apriltag_ros</depend>
  <export>
        <build_version>9</build_version>
    <metapackage />
  </export>
</package>
