<?xml version="1.0"?>
<package format="2">
  <name>movai_ce_demos</name>
  <version>0.0.1</version>
  <description>Main flow and maps of the community edition demos.</description>
  <maintainer email="mithun@mov.ai">Mithun Kinarullathil</maintainer>
  <url>https://github.com/MOV-AI/movai_ce_demos</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- TODO: Update other dependencies here, such as navigation and localization packages -->
  <!-- <depend>movai_tugbot_ign_sim_baseline</depend> -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <exec_depend>movai_tugbot_ign_sim</exec_depend>
  <exec_depend>movai_husky_ign_sim</exec_depend>

  <export>
        <build_version>14</build_version>
    <metapackage />
  </export>
</package>
